--- a/configuration.properties
+++ b/configuration.properties
@@ -1,5 +1,26 @@
+!--Test datalarini tek bir yerden kontrol etmek için .properties dosyasi olustururuz.
+!-- Buradaki verileri(datalari) testimizi calistirirken kullanmak icin test class'imiza
+# properties uzantili
+!--dosyamizdaki datalara ulasmak icin aracilik yapacak configreader class'ina ihtiyacimiz
+# vardir.
+!--Buradaki datalar key=value seklinde calisir. Key=value seklinde calistigi icin ikinci
+# ayni key eklenemez
+
 techproeducation_url=https://techproeducation.com
 amazon_url=https://amazon.com
+
+#Open source Datalari
+openSource_url=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
 browser=chrome
-username=Veli
-password=Veli.123
+username=Admin
+password=admin123
+
+#TestCenter Datalari
+kullaniciAdi=techproed
+kullaniciPassword=SuperSecretPassword
+testCenterUrl=https://testcenter.techproeducation.com/index.php?page=form-authentication
+
+#BlueRentACar Datalari
+blueRentACarUrl=https://www.bluerentalcars.com/
+email=jack@gmail.com
+pass:12345
