--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,12 @@
             <version>4.8.3</version>
         </dependency>
 
-
+        <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>4.0.9</version>
+        </dependency>
 
 
 
