--- a/configuration.properties
+++ b/configuration.properties
@@ -24,3 +24,5 @@ testCenterUrl=https://testcenter.techproeducation.com/index.php?page=form-authen
 blueRentACarUrl=https://www.bluerentalcars.com/
 email=jack@gmail.com
 pass:12345
+fakeEmail=fake@bluerentalcars.com
+fakepass=fakepass
